--- a/style.css
+++ b/style.css
@@ -2,3 +2,14 @@
 * {
   box-sizing: border-box;
 }
+
+/* body */
+body {
+  background-color: #f4f4f4;
+  font-family: Arial, Helvetica, sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-height: 100vh;
+  margin: 0;
+}
