--- a/style.css
+++ b/style.css
@@ -29,3 +29,17 @@ aside {
   width: 250px;
   border-right: 1px solid #111;
 }
+
+/* buttons */
+button {
+  cursor: pointer;
+  background-color: #fff;
+  border: 1px solid #111;
+  border-radius: 5px;
+  display: block;
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 20px;
+  font-weight: bold;
+  font-size: 14px;
+}
