--- a/style.css
+++ b/style.css
@@ -68,3 +68,10 @@ h3 {
   font-weight: 300;
   margin: 20px 0 0;
 }
+
+.person {
+  display: flex;
+  justify-content: space-between;
+  font-size: 20px;
+  margin-bottom: 10px;
+}
